# shotgun

./: .env  .gitignore  .zipignore  Dockerfile  Pipfile  docker-compose.yaml  p2r.sh  prod.docker-compose.yaml  pyproject.toml  requirements.txt  server.sh  sql_backup.sh  uwsgi.ini  zip.sh
backend/: config.toml  db.sqlite3  manage.py
backend/backend/: settings.py  urls.py
backend/config/: wx.py
backend/core/: __init__.py  admin.py  api.py  models.py  response.py  route.py  test.py  urls.py  views.py
backend/core/config/: __init__.py  minimp.py
backend/core/controllers/: __init__.py  menu.py  user.py
backend/core/libs/: DtkClient.py  middleware.py  wrapper.py
backend/core/migrations/: 0001_initial.py  0002_alter_usermodel_id.py  0003_usermodel_created_at_usermodel_is_deleted_and_more.py  0004_userinvitecode_userinviterelate.py  0005_userinviterelate_a_b_id.py  0006_userinviterelate_belong_and_more.py  0007_remove_userinviterelate_a_b_id_and_more.py  0016_post.py  (+33 more)
backend/dtk/: DtkClient.py  apps.py  urls.py  views.py
backend/link/: admin.py  api.py  form.py  models.py  urls.py  views.py
backend/plugins/: __init__.py
backend/store/: admin.py  api.py  apps.py  models.py  urls.py
backend/templates/: 404.html  home.html
backend/urlzip/: admin.py  api.py  apps.py  form.py  models.py  urls.py  views.py
backup/: sqlite-2024-02-19.sql  sqlite-2024-02-20.sql  sqlite-2024-02-26.sql
coin/: order.py
frontend/admin/: .env  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.js
order/: order.py  tron.py
(+63 files in other folders)
